--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">FinTrack</string>
 
-    <string name="current_balance">Current balance</string>
+    <string name="current_balance">Баланс</string>
 
     <string-array name="name_currency">
         <item>USD</item>
@@ -80,7 +80,8 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
-    <string name="settings">Settings</string>
-    <string name="about">About</string>
+    <string name="settings">Настройки</string>
+    <string name="about">О программе</string>
+    <string name="description_app">Описание: \n Приложение для управления личными финансами \n Разработчик: Зеленин Р.А. \n ШМР Яндекс \n 2018</string>
 
 </resources>
