--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,34 +5,29 @@
         <item>Операции</item>
     </string-array>
 
-    <string name="amount">Amount</string>
-    <string name="category">Category</string>
-    <string name="date">Date</string>
-
-    <string name="income">Income</string>
-    <string name="outcome">Outcome</string>
-    
-    <string name="title_dialog_new_operation">Add transaction</string>
-    <string name="success_add_record">Success add record</string>
-    <string name="failed_add_record">Filed add record</string>
-
-    <string name="title_bills_activity">Bills</string>
-
+    <string name="amount">Сумма</string>
+    <string name="category">Категории</string>
+    <string name="date">Дата</string>
+    <string name="income">Доходы</string>
+    <string name="outcome">Расходы</string>
+    <string name="title_dialog_new_operation">Добавить запись</string>
+    <string name="success_add_record">Запись успешно добавлена</string>
+    <string name="failed_add_record">Ошибка добавления записи</string>
+    <string name="title_bills_activity">Счета</string>
     <string name="app_name">FinTrack</string>
+    <string name="current_balance">Баланс счета</string>
 
-    <string name="current_balance">Balance</string>
+    <string name="ok">Oк</string>
+    <string name="cancel">Отмена</string>
 
-    <string name="ok">Ok</string>
-    <string name="cancel">Cancel</string>
-
-    <string name="LangTitle">Language</string>
-    <string name="LangDialogTitle">Choose language:</string>
-    <string name="LangSummary">Application language.\nRestart the application to accept the changes..</string>
+    <string name="LangTitle">Язык</string>
+    <string name="LangDialogTitle">Выберите язык:</string>
+    <string name="LangSummary">Язык приложения.\nНеобходимо перезапустить приложение для принятия изменений.</string>
 
     <string-array name="entries_lang">
-        <item>Language</item>
-        <item>English</item>
-        <item>Russian</item>
+        <item>Язык аппарата</item>
+        <item>Английский</item>
+        <item>Русский</item>
     </string-array>
     <string-array name="entryvalues_lang">
         <item>default</item>
@@ -44,12 +39,12 @@
         <item>USD</item>
         <item>RUB</item>
     </string-array>
-    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_settings">Настройки</string>
 
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
+    <string name="pref_header_general">Основные</string>
 
     <string name="pref_title_social_recommendations">Enable social recommendations</string>
     <string name="pref_description_social_recommendations">Recommendations for people to contact
@@ -117,8 +112,8 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
-    <string name="settings">Settings</string>
-    <string name="about">About</string>
+    <string name="settings">Настройки</string>
+    <string name="about">О программе</string>
     <string name="description_app">Описание: \n Приложение для управления личными финансами \n Разработчик: Зеленин Р.А. \n ШМР Яндекс \n 2018</string>
 
 </resources>
