--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
 
     <string name="income">Income</string>
     <string name="outcome">Outcome</string>
-    
+
     <string name="title_dialog_new_operation">Add transaction</string>
     <string name="success_add_record">Success add record</string>
     <string name="failed_add_record">Filed add record</string>
@@ -120,5 +120,9 @@
     <string name="settings">Settings</string>
     <string name="about">About</string>
     <string name="description_app">Описание: \n Приложение для управления личными финансами \n Разработчик: Зеленин Р.А. \n ШМР Яндекс \n 2018</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="accounts">Accounts</string>
 
 </resources>
