--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,5 +124,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="accounts">Accounts</string>
+    <string name="expense">Expense</string>
+    <string name="add_transaction">New transaction</string>
+    <string name="hint_sum">Sum</string>
+    <string name="error_invalid_number">Invalid sum</string>
 
 </resources>
