--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,7 +115,7 @@
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="settings">Settings</string>
     <string name="about">About</string>
-    <string name="description_app">Описание: \n Приложение для управления личными финансами \n Разработчик: Зеленин Р.А. \n ШМР Яндекс \n 2018</string>
+    <string name="description_app">Описание: \n Приложение для управления личными финансами \n Разработчик: Зеленин Р.А., Сорокин В. А. \n ШМР Яндекс \n 2018</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
