Design changes, landscape orientation, some tests

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -143,5 +143,11 @@
     <string name="logo_ya">Я.</string>
     <string name="show_in_other_currencies">В других валютах</string>
     <string name="btn_new_transaction">Транзакция</string>
+    <string name="confirm_transaction">Добавить</string>
+    <string name="nav_template_and_periodic_transactions">Шаблоны</string>
+    <string name="templates">Шаблоны</string>
+    <string name="periodic">Периодические</string>
+    <string name="gifts">Подарки</string>
+    <string name="no_data">Добавьте первую транзакцию.</string>
 
 </resources>
