--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,9 +115,8 @@
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="settings">Settings</string>
     <string name="about">About</string>
-    <string name="description_app">Описание: \n Приложение для управления личными финансами \n Разработчик: Зеленин Р.А., Сорокин В. А. \n ШМР Яндекс \n 2018</string>
+    <string name="description_app">Описание: \n Приложение для управления личными финансами \n Разработчик: Сорокин В. А. \n ШМР Яндекс \n 2018</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="accounts">Accounts</string>
     <string name="expense">Expense</string>
     <string name="add_transaction">New transaction</string>
@@ -152,5 +151,11 @@
     <string name="periodic">Periodic</string>
     <string name="gifts">Gifts</string>
     <string name="no_data">No data</string>
+    <string name="deletion">Deletion</string>
+    <string name="are_you_sure_delete">Are you sure want to delete this item?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="template_every_x_days">Every %1$d days</string>
+    <string name="add_your_transaction_here">Add your transactions here.</string>
 
 </resources>
